force-app/main/default/objects/Direcci_n_de_entrega__c/Direcci_n_de_entrega__c.object-meta.xml
<CustomObject>
    <description>Ship to address</description>
    <label>Dirección de entrega</label>
    <nameField>
        <displayFormat>STA-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones de entrega</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>