force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Actividad_2__c.field-meta.xml
<CustomField>
    <fullName>Actividad_2__c</fullName>
    <label>Sub-actividad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Actividad_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abonos líquidos</fullName>
            </value>
            <value>
                <fullName>Aerosoles</fullName>
            </value>
            <value>
                <fullName>Albergue</fullName>
            </value>
            <value>
                <fullName>Almacén de distribución</fullName>
            </value>
            <value>
                <fullName>Almacén de materiales</fullName>
            </value>
            <value>
                <fullName>Artes decorativas</fullName>
            </value>
            <value>
                <fullName>Artes gráficas</fullName>
            </value>
            <value>
                <fullName>Balneario - Centro de salud - Spa</fullName>
            </value>
            <value>
                <fullName>Bebidas</fullName>
            </value>
            <value>
                <fullName>Bodegas</fullName>
            </value>
            <value>
                <fullName>Calderería</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Casa de colonias</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Centro de formación</fullName>
            </value>
            <value>
                <fullName>Centro lavado de coches</fullName>
            </value>
            <value>
                <fullName>Centro penitenciario</fullName>
            </value>
            <value>
                <fullName>Centro reinserción social</fullName>
            </value>
            <value>
                <fullName>Cerámica</fullName>
            </value>
            <value>
                <fullName>Club de alterne</fullName>
            </value>
            <value>
                <fullName>Club de golf</fullName>
            </value>
            <value>
                <fullName>Club deportivo</fullName>
            </value>
            <value>
                <fullName>Club hípica</fullName>
            </value>
            <value>
                <fullName>Colegios</fullName>
            </value>
            <value>
                <fullName>Componentes automoción</fullName>
            </value>
            <value>
                <fullName>Conservera pescado</fullName>
            </value>
            <value>
                <fullName>Conservera vegetales</fullName>
            </value>
            <value>
                <fullName>Cuartel militar</fullName>
            </value>
            <value>
                <fullName>Dependencias de Administraciones Públicas</fullName>
            </value>
            <value>
                <fullName>Elaboración ahumados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>