force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Alerta_Bloqueo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Bloqueo_Cuenta__c</fullName>
    <label>Alerta bloqueo</label>
    <type>TextArea</type>
</CustomField>