force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>