force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Boca_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Boca_de_carga__c</fullName>
    <label>Boca de carga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>