force-app/main/default/objects/Direcci_n_de_entrega__c/fields/C_digo_tarifa__c.field-meta.xml
<CustomField>
    <fullName>C_digo_tarifa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código tarifa</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Direcciones de entrega</relationshipLabel>
    <relationshipName>Direcciones_de_entrega</relationshipName>
    <type>Lookup</type>
</CustomField>