force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <label>Código Postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>