force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Codigo_transportista__c.field-meta.xml
<CustomField>
    <fullName>Codigo_transportista__c</fullName>
    <label>Código transportista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>