force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Comarca__c.field-meta.xml
<CustomField>
    <fullName>Comarca__c</fullName>
    <label>Comarca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>l’Alt Camp</fullName>
            </value>
            <value>
                <fullName>l’Alt Empordà</fullName>
            </value>
            <value>
                <fullName>l’Alt Penedès</fullName>
            </value>
            <value>
                <fullName>l’Alt Urgell</fullName>
            </value>
            <value>
                <fullName>l’Alta Ribagorça</fullName>
            </value>
            <value>
                <fullName>l’Anoia</fullName>
            </value>
            <value>
                <fullName>el Bages</fullName>
            </value>
            <value>
                <fullName>el Baix Camp</fullName>
            </value>
            <value>
                <fullName>el Baix Ebre</fullName>
            </value>
            <value>
                <fullName>el Baix Empordà</fullName>
            </value>
            <value>
                <fullName>el Baix Llobregat</fullName>
            </value>
            <value>
                <fullName>el Baix Penedès</fullName>
            </value>
            <value>
                <fullName>el Barcelonès</fullName>
            </value>
            <value>
                <fullName>el Berguedà</fullName>
            </value>
            <value>
                <fullName>la Cerdanya</fullName>
            </value>
            <value>
                <fullName>la Conca de Barberà</fullName>
            </value>
            <value>
                <fullName>el Garraf</fullName>
            </value>
            <value>
                <fullName>les Garrigues</fullName>
            </value>
            <value>
                <fullName>la Garrotxa</fullName>
            </value>
            <value>
                <fullName>el Gironès</fullName>
            </value>
            <value>
                <fullName>el Maresme</fullName>
            </value>
            <value>
                <fullName>el Montsià</fullName>
            </value>
            <value>
                <fullName>la Noguera</fullName>
            </value>
            <value>
                <fullName>Osona</fullName>
            </value>
            <value>
                <fullName>el Pallars Jussà</fullName>
            </value>
            <value>
                <fullName>el Pallars Sobirà</fullName>
            </value>
            <value>
                <fullName>el Pla de l’Estany</fullName>
            </value>
            <value>
                <fullName>el Pla d’Urgell</fullName>
            </value>
            <value>
                <fullName>el Priorat</fullName>
            </value>
            <value>
                <fullName>la Ribera d’Ebre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>