force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Consumo_ltimos_12_meses__c.field-meta.xml
<CustomField>
    <fullName>Consumo_ltimos_12_meses__c</fullName>
    <label>Consumo últimos 12 meses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>