force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Consumo_previsto_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_Kgs__c</fullName>
    <inlineHelpText>Consumo prevista Kgs. (del contrato)</inlineHelpText>
    <label>Consumo previsto Kgs.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>