force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Consumo_promedio_ltimos_3_a_os__c.field-meta.xml
<CustomField>
    <fullName>Consumo_promedio_ltimos_3_a_os__c</fullName>
    <label>Consumo promedio últimos 3 años</label>
    <length>255</length>
    <type>Text</type>
</CustomField>