force-app/main/default/objects/Direcci_n_de_entrega__c/fields/cuenta__c.field-meta.xml
<CustomField>
    <fullName>cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones de entrega</relationshipLabel>
    <relationshipName>Direcciones_de_entrega</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>