force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Deposito__c.field-meta.xml
<CustomField>
    <fullName>Deposito__c</fullName>
    <label>Depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>