force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <inlineHelpText>dto(€/Kg)</inlineHelpText>
    <label>Descuento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>