force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Direccion_2__c.field-meta.xml
<CustomField>
    <fullName>Direccion_2__c</fullName>
    <label>Dirección 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>