force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <length>50</length>
    <type>Text</type>
</CustomField>