force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Estado_boca_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Estado_boca_de_carga__c</fullName>
    <label>Estado boca de carga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>