force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Estado_deposito__c.field-meta.xml
<CustomField>
    <fullName>Estado_deposito__c</fullName>
    <label>Estado depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>