force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Estado_telemedida__c.field-meta.xml
<CustomField>
    <fullName>Estado_telemedida__c</fullName>
    <label>Estado telemedida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>