force-app/main/default/objects/Direcci_n_de_entrega__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>ExternalId para referenciar el registro al realizar actualizaciones desde sistemas externos</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>