force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Fecha_1er_llenado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_1er_llenado__c</fullName>
    <label>Fecha 1er llenado</label>
    <type>Date</type>
</CustomField>