force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Fecha_baja_t_cnica__c.field-meta.xml
<CustomField>
    <fullName>Fecha_baja_t_cnica__c</fullName>
    <formula>cuenta__r.Fecha_baja_t_cnica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha baja técnica</label>
    <type>Date</type>
</CustomField>