force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Fecha_inactivo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inactivo__c</fullName>
    <inlineHelpText>Fecha cambio a Inactivo</inlineHelpText>
    <label>Fecha Inactivo</label>
    <type>Date</type>
</CustomField>