force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Fecha_ltimo_mantenimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ltimo_mantenimiento__c</fullName>
    <label>Fecha último mantenimiento</label>
    <type>Date</type>
</CustomField>