force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Fecha_ultima_Sync__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultima_Sync__c</fullName>
    <label>Fecha última Sync</label>
    <type>DateTime</type>
</CustomField>