force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Gestor_Logistico__c.field-meta.xml
<CustomField>
    <fullName>Gestor_Logistico__c</fullName>
    <label>Gestor Logístico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80000129</fullName>
                <label>MPGAS</label>
            </value>
            <value>
                <fullName>80000646</fullName>
                <label>MPGAS NORTE</label>
            </value>
            <value>
                <fullName>80000647</fullName>
                <label>ITAC</label>
            </value>
            <value>
                <fullName>80000648</fullName>
                <label>Planning PRIMAGAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>