force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Id_Cliente_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente_Navision__c</fullName>
    <formula>cuenta__r.Id_Navision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Cliente Navision</label>
    <type>Text</type>
</CustomField>