force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Motivo_bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_bloqueo__c</fullName>
    <label>Motivo bloqueo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>