force-app/main/default/objects/Direcci_n_de_entrega__c/fields/OldAccount__c.field-meta.xml
<CustomField>
    <fullName>OldAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones de entrega (Old Account)</relationshipLabel>
    <relationshipName>Direcciones_de_entrega1</relationshipName>
    <type>Lookup</type>
</CustomField>