force-app/main/default/objects/Direcci_n_de_entrega__c/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <label>Old Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>