force-app/main/default/objects/Direcci_n_de_entrega__c/fields/OldNavisionId__c.field-meta.xml
<CustomField>
    <fullName>OldNavisionId__c</fullName>
    <label>OldNavisionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>