force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
                <default>true</default>
                <label>ES</label>
            </value>
            <value>
                <fullName>España</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>