force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Pendiente_de_confirmar__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_confirmar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pendiente de confirmar</label>
    <type>Checkbox</type>
</CustomField>