force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Poblacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion__c</fullName>
    <label>Población</label>
    <length>255</length>
    <type>Text</type>
</CustomField>