force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>Campo provisional test</description>
    <label>Precio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>