force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Precio_actual__c.field-meta.xml
<CustomField>
    <fullName>Precio_actual__c</fullName>
    <label>Precio actual</label>
    <length>15</length>
    <type>Text</type>
</CustomField>