force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Direcciones de entrega</relationshipLabel>
    <relationshipName>Direcciones_de_entrega</relationshipName>
    <type>Lookup</type>
</CustomField>