force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Propiedad_del_tanque__c.field-meta.xml
<CustomField>
    <fullName>Propiedad_del_tanque__c</fullName>
    <label>Propiedad del tanque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>