force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Propietario_del_tanque__c.field-meta.xml
<CustomField>
    <fullName>Propietario_del_tanque__c</fullName>
    <label>Propietario del tanque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primagas</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>