force-app/main/default/objects/Direcci_n_de_entrega__c/fields/rv2Status__c.field-meta.xml
<CustomField>
    <fullName>rv2Status__c</fullName>
    <label>RV Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>recordval__RV2RecordStatus</valueSetName>
    </valueSet>
</CustomField>