force-app/main/default/objects/Direcci_n_de_entrega__c/fields/RV_Store_date_and_time_of_valida_address__c.field-meta.xml
<CustomField>
    <fullName>RV_Store_date_and_time_of_valida_address__c</fullName>
    <label>RV Store date and time of valida address</label>
    <type>DateTime</type>
</CustomField>