force-app/main/default/objects/Direcci_n_de_entrega__c/fields/RV_Store_status_message_address__c.field-meta.xml
<CustomField>
    <fullName>RV_Store_status_message_address__c</fullName>
    <label>RV Store status message address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>