force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Saldo_pendiente_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Saldo_pendiente_Cuenta__c</fullName>
    <inlineHelpText>Saldo vencido de la Cuenta relacionada</inlineHelpText>
    <label>Saldo pendiente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>