force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Saldo_vivo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Saldo_vivo_Cuenta__c</fullName>
    <label>Saldo vivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>