force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Shipping_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Agent_Code__c</fullName>
    <inlineHelpText>80000129 MPGas
80000646 MPGas
80000647 ITAC</inlineHelpText>
    <label>Shipping Agent Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>