force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Telemedida__c.field-meta.xml
<CustomField>
    <fullName>Telemedida__c</fullName>
    <label>Telemedida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>