force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Temperatura_fija__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_fija__c</fullName>
    <label>Temperatura fija</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>