force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Tipo_de_camion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_camion__c</fullName>
    <label>Tipo de camión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PEQUEÑO</fullName>
            </value>
            <value>
                <fullName>MEDIANO</fullName>
                <default>true</default>
                <label>MEDIANO</label>
            </value>
            <value>
                <fullName>GRANDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>