force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Tipo_de_direccion_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_direccion_de_envio__c</fullName>
    <label>Tipo de dirección de envío</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>LNG</fullName>
            </value>
            <value>
                <fullName>METERED</fullName>
            </value>
            <value>
                <fullName>BULK METERED</fullName>
            </value>
            <value>
                <fullName>BioLPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>