force-app/main/default/objects/Direcci_n_de_entrega__c/fields/Tipo_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_entrega__c</fullName>
    <label>Tipo de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automático</fullName>
            </value>
            <value>
                <fullName>Bajo pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>