force-app/main/default/objects/Direcci_n_de_entrega__c/validationRules/Validar.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar</fullName>
    <active>true</active>
    <description>Valida calle, código postal, ciudad y provincia</description>
    <errorConditionFormula>OR (ISBLANK( Codigo_Postal__c ),ISBLANK(  Poblacion__c  ),ISBLANK ( Direccion__c ))&amp;&amp;$Profile.Id = &apos;00eD00000012rRb&apos;</errorConditionFormula>
    <errorMessage>Debes rellenar los campos : Población, Código postal y Población</errorMessage>
</ValidationRule>