force-app/main/default/objects/Direcci_n_de_entrega__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>cuenta__c</columns>
    <columns>Tipo_de_entrega__c</columns>
    <columns>Tipo_de_direccion_de_envio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>